Fix: About section on mobile

--- a/main.scss
+++ b/main.scss
@@ -216,6 +216,9 @@ footer{
         padding-top: 5vh;
         color: white;
     }
+    p{
+        color: white;
+    }
     form{
         display: flex;
         flex-direction: column;
