--- a/small.scss
+++ b/small.scss
@@ -33,9 +33,3 @@
 .question-img{
     align-items: center;
 }
-#pricing{
-    a{
-        top: 0;
-        left: 2vw;
-    }
-}
